--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
     "react": "^18.2.0",
+    "react-calendar": "^4.0.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.39.1",
     "react-query": "^3.39.2",
@@ -46,6 +47,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-calendar": "^3.5.3",
     "@types/styled-components": "^5.1.26",
     "autoprefixer": "^10.4.12",
     "postcss": "^8.4.16",
